Actions
Bug #10316
closedtic: NULL pointer errors
Start date:
2019-01-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
tic_scan.c: In function 'get_token': tic_scan.c:234:11: error: comparison between pointer and integer [-Werror] if (ch != NULL && ch != ',') ^~ tic_scan.c:236:11: error: comparison between pointer and integer [-Werror] if (ch == NULL) ^~ tic_scan.c: In function 'trans_string': tic_scan.c:496:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 3f4e8cf5ba66371b07c889489d052e8b346d2c3f
commit 3f4e8cf5ba66371b07c889489d052e8b346d2c3f Author: Toomas Soome <tsoome@me.com> Date: 2019-01-28T22:45:37.000Z 10316 tic: NULL pointer errors Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Updated by Electric Monk about 2 years ago
git commit 33119c8b2ee152d0614d09fb413393430a97a6bf
commit 33119c8b2ee152d0614d09fb413393430a97a6bf Author: Toomas Soome <tsoome@me.com> Date: 2020-04-07T04:07:23.000Z 10316 tic: NULL pointer errors Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions