10316 tic: NULL pointer errors Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>